<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/golem"
        android:src="@drawable/golem" />

    <TextView
        android:id="@+id/name_daikyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/largetext"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_daikiti"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/daikyou"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/name_daikiti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_daikyou"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/unsei"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
